Fix opening legacy files from the pre-open-source era