@@ -4,7 +4,7 @@
 
 	<groupId>lc.kra.jds</groupId>
 	<artifactId>jds</artifactId>
-	<version>2.2.0</version>
+	<version>2.3.0</version>
 	
 	<name>JDigitalSimulator</name>
 	<url>http://kra.lc/projects/jdigitalsimulator/</url>
@@ -99,6 +99,7 @@
 								<jdkPreference>preferJre</jdkPreference>
 								<opts>
 									<opt>-Xss4m</opt>
+									<opt>--add-opens java.base/java.io=ALL-UNNAMED</opt>
 								</opts>
 							</jre>
 							<versionInfo>
